# vde2

vde-2/: Makefile.am  configure.ac
vde-2/src/lib/python/: Makefile.am  VdePlug.py  vdeplug.py  vdeplug_python.py
vde-2/tests/: Makefile.am  common.c  common.h  test_libvdeplug_basic.c  test_libvdeplug_enstablish.c  test_libvdeplug_p2p.c
